@@ -1,18 +1,16 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=5
 
-PYTHON_COMPAT=( python{2_6,2_7} )
+PYTHON_COMPAT=( python2_7 )
 PYTHON_REQ_USE="tk"
 
 inherit distutils-r1 eutils
 
 MY_PN="bhtree"
 MY_P="${MY_PN}-${PV/_rc3/}"
-
-PYTHON_MODNAME="${MY_PN}"
 
 DESCRIPTION="MGLTools Plugin -- bhtree"
 HOMEPAGE="http://mgltools.scripps.edu"
@@ -23,7 +21,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND="dev-python/numpy"
+RDEPEND="dev-python/numpy[${PYTHON_USEDEP}]"
 DEPEND="${RDEPEND}
 	dev-lang/swig"
 
