@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/mgltools-bhtree
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Mar 2015; Justin Lecher <jlec@gentoo.org> mgltools-bhtree-1.5.6.ebuild:
+  sci-chemistry/mgltools-bhtree: Drop PYTHON_MODNAME and support for python2_6
 
   10 Jun 2013; Justin Lecher <jlec@gentoo.org>
   -mgltools-bhtree-1.5.4-r1.ebuild, mgltools-bhtree-1.5.6.ebuild:
@@ -50,4 +53,3 @@
   17 May 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
   +mgltools-bhtree-1.5.4.ebuild, +metadata.xml:
   Initial checkin
-
